Prevent elastic overscroll bounce on safari

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -5,13 +5,19 @@ $success: #addc91;
 @import "~bootstrap/scss/bootstrap";
 @import "~bootstrap-icons/font/bootstrap-icons.css";
 
+:root,
 html {
+  @include gradient-bg(shift-color($dark, $alert-bg-scale));
+}
+
+body {
+  width: 100vw;
+  height: 100vh;
   overflow: hidden;
 }
 
-html,
-body {
-  background-color: lighten($primary, 40%);
+#root {
+  overflow: auto;
 }
 
 a {
